# kuroko

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  compose.yaml  pyproject.toml  report_new.md  test.md  test_md.py  test_md2.py  test_md3.py  test_md4.py  test_md5.py  test_report.md
.serena/: project.yml
checkpoint/: 2026-02-28__kuroko__ISSUE-1.md  2026-02-28__kuroko__misc.md  2026-03-22__kuroko__ISSUE-19.md  2026-03-29__kuroko__ISSUE-21.md  2026-03-29__kuroko__ISSUE-29.md
doc/: CURRENT_PLAN.md  ROADMAP.md  first_idea.md  second_idea.md
docker/: dev-entrypoint.sh
example/: checkpoint_skill.md  kuroko.config.yaml.example
kanpe/: brief_formatter.py  cli.py
kuroko/: application.py  chunker.py  cli.py  collector.py  config.py  constants.py  inference.py  llm.py  memo_collector.py  parser.py  reporter.py  worklist.py
kuroko_core/: config.py  db.py  embeddings.py  history.py
shinko/: cli.py  insight_schema.py  llm.py
tests/: test_application.py  test_chunker.py  test_cli_collect.py  test_collector.py  test_collector_db.py  test_config_worklist.py  test_containerization_assets.py  test_db.py  test_embeddings.py  test_history.py  test_inference.py  test_kanpe_brief_formatter.py  test_kanpe_cli_commands.py  test_kanpe_refresh.py  test_kanpe_shinko_invocation.py  test_kanpe_suggest.py  test_llm.py  test_memo_collector.py  test_parser.py  test_reporter.py  test_reporter_worklist.py  test_shinko_cli.py  test_shinko_cli_commands.py  test_shinko_history.py  test_shinko_lang.py  test_shinko_sanitization.py  test_worklist.py  (+1 more)
(+32 files in other folders)
